# document-search

./: .gitignore  README.md  setup.cfg
backend/: main.py  pyproject.toml
backend/backend/: database.py  routes.py
backend/backend/documents/: api.py  crud.py  models.py  schemas.py
frontend/: .eslintrc  package-lock.json  package.json
frontend/src/: App.scss  App.tsx  index.tsx
frontend/src/api/: index.ts
frontend/src/api/documents/: config.ts  index.ts
frontend/src/components/Document/: Document.module.scss  index.tsx
frontend/src/components/Layout/: index.tsx
frontend/src/components/Layout/NavigationLink/: index.tsx
frontend/src/components/UI/Spinner/: Spinner.module.scss  index.tsx
frontend/src/pages/: DocumentCreatePage.tsx  DocumentSearchPage.tsx  index.tsx
frontend/src/store/: documents.ts  index.ts  index.tsx
frontend/src/types/: index.tsx
