[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Mikhail Sidorov <7780462+mikhailsidorov@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.61.2"}
sqlalchemy = "^1.3.20"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.4"
flake8 = "^3.8.4"
mypy = "^0.790"
sqlalchemy-stubs = "^0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
